trying to fix the second background image to work on iphone 3 using the image from the top

--- a/styles/style.css
+++ b/styles/style.css
@@ -306,10 +306,10 @@ a.nav-link:hover {
 /* -----------fifth row css ----------- */
 
 #fifth-row {
-  height: 30vh;
+  height: 350px;
   background-position: center;
   background-size: cover;
-  background-image: url(../assets/blurPC.jpg);
+  background-image: url(../assets/woods-wallpaper.jpg);
   background-attachment: fixed;
   color: #fff;
 }
